--- a/index.html
+++ b/index.html
@@ -1,13 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-
-    <title>Carousel Template for Bootstrap</title>
-	
-  </head>
-<!-- NAVBAR
-================================================== -->
-  <body>
-    Prueba
-  </body>
+<html>
+<body>
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
+</body>
 </html>
