--- a/Core Defense.html
+++ b/Core Defense.html
@@ -42,6 +42,7 @@
         var extra = 1; //Separa 1 pixel entre casillas cuando hay rendija.
         var rendija = true; //True si hay rendija activa
         var m = new mundo(); //Objeto mundo
+        var sc = new shootingController();
         var m_vert = new Image();
 		var m_hor = new Image();
 		var m_ArI = new Image();
@@ -145,6 +146,12 @@
 			this.posx = x;
 			this.posy = y;
 			this.velocidad = vel;
+            this.dir = 0;
+            this.cadencia = 1;
+            //Disparo
+            this.shoot = function(){
+                sc.shoot(posx,posy,dir);
+            }
         }
 		
 		/*$.getJSON( "ajax/test.json", function( data ) {
@@ -356,6 +363,7 @@
 			
 			//0 arriba, 1 abajo, 2 izquierda y 3 derecha
 			this.moverJugador = function (num) {
+                jugador.dir=num;           //Actualiza la direccion en la que mira
 				var jxOriginal = jugador.posx;
 				var jyOriginal = jugador.posy;
 				
