--- a/Core Defense.html
+++ b/Core Defense.html
@@ -138,15 +138,15 @@
 				
 			//Este try para firefox, porque no espera a cargar las imagenes y puede saltar error
 			//En chrome no hay problema
-			//try {
+			try {
 				m.pintado();
-			/*} catch (e) {
+			} catch (e) {
 					if (e.name == "NS_ERROR_NOT_AVAILABLE") {
 						setTimeout(computeNS, 100);
 				} else {
 					throw e;
 				}
-			}*/
+			}
         }
         
         //PARA TESTEO: Si pulsas play empieza el bucle
@@ -263,11 +263,11 @@
 			}
 		};
 		
-		//startNS();
+		startNS();
 
-		setTimeout(function(){
+		/*setTimeout(function(){
     		startNS();
-		}, 1000);
+		}, 1000);*/
     </script>
 </head>
 
