--- a/Core Defense.html
+++ b/Core Defense.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+	
     <title>Core Defense</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <style>
