Jugador generado en posiciones del json

--- a/Core Defense.html
+++ b/Core Defense.html
@@ -53,7 +53,7 @@
 			
 			$.ajax({
 				dataType: "json",
-				url: "json/mapa.json",
+				url: "json/MapaFacil.json",
 				mimeType: "application/json",
 				success: function(result){
 					m.initMundo(context, result);
