--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <!-- Referencia del idioma -->
 <html lang="en">
   <head>
+	<!-- Icono que aparece en las pestañas -->
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<title>Slothery Plus Black Games</title>
 	
 	<!-- Required meta tags -->
