--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
 	<!-- Icono que aparece en las pestañas -->
-	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+	<link rel="shortcut icon" type="image/x-icon" href="src/sprite1.png">
 	<title>Slothery Plus Black Games</title>
 	
 	<!-- Required meta tags -->
