--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<script src="https://use.fontawesome.com/db0cd0852c.js"></script>
 	
 	<!-- Main CSS -->
-    <link href="style.css" rel="stylesheet" type= "text/css">
+    <link href="src/css/style.css" rel="stylesheet" type= "text/css">
   </head>
   <body>
   
@@ -31,7 +31,7 @@
 		<div class = "row">
 		<!-- la barra tendra 2 columnas, una el logo y otra los enlaces de las paginas web -->
 			<div class = "col-sm-6">
-				<img src="src/sprite1.png" alt="logo">
+				<img src="src/images/sprite1.png" alt="logo">
 			</div>
 			<div class = "col-sm-6">
 				<ul class= "social-media list-inline text-right">
@@ -111,17 +111,17 @@
 					  <img class="d-block w-100" src="src/fondo/fondo.png" alt="First slide">
 						  <div class = "carousel-caption">
 							<h2>Core Defense</h2>
-							<img src="src/titulo.png" alt="titulo" width="220" height="100"></img>
+							<img src="src/images/titulo.png" alt="titulo" width="220" height="100"></img>
 							<p class="h4">¡Protege el núcleo central contra virus informáticos!</p>
 							<p>Primer juego creado por Slothery plus Black Games para la asignatura de Juegos para web y Redes Sociales</p>
 							<a href="Core%20Defense.html" class="btn btn-secondary">Jugar</a>	<!-- Enlace para jugar al juego -->				  
 						  </div>
 					</div>
 					<div class="carousel-item">
-					  <img class="d-block w-100" src="src/core_defense_logo.png" alt="Second slide">
+					  <img class="d-block w-100" src="src/images/core_defense_logo.png" alt="Second slide">
 					</div>
 					<div class="carousel-item">
-					  <img class="d-block w-100" src="src/unity_logo.jpg" alt="Third slide">
+					  <img class="d-block w-100" src="src/images/unity_logo.jpg" alt="Third slide">
 					</div>
 			  </div>
 
