--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
 	<!-- Icono que aparece en las pestañas -->
-	<link rel="shortcut icon" type="image/x-icon" href="src/sprite1.png">
+	<link rel="shortcut icon" type="image/x-icon" href="src/images/sprite1.png">
 	<title>Slothery Plus Black Games</title>
 	
 	<!-- Required meta tags -->
@@ -108,7 +108,7 @@
 			  </ol>
 			  <div class="carousel-inner">
 					<div class="carousel-item active">
-					  <img class="d-block w-100" src="src/fondo/fondo.png" alt="First slide">
+					  <img class="d-block w-100" src="src/images/fondo.png" alt="First slide">
 						  <div class = "carousel-caption">
 							<h2>Core Defense</h2>
 							<img src="src/images/titulo.png" alt="titulo" width="220" height="100"></img>
