--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 							<img src="src/images/titulo.png" alt="titulo" width="220" height="100"></img>
 							<p class="h4">¡Protege el núcleo central contra virus informáticos!</p>
 							<p>Primer juego creado por Slothery plus Black Games para la asignatura de Juegos para web y Redes Sociales</p>
-							<a href="Core%20Defense.html" class="btn btn-secondary">Jugar</a>	<!-- Enlace para jugar al juego -->				  
+							<a href="src/html/Core%20Defense.html" class="btn btn-secondary">Jugar</a>	<!-- Enlace para jugar al juego -->				  
 						  </div>
 					</div>
 					<div class="carousel-item">
