Prueba botones android

--- a/src/html/Core Defense.html
+++ b/src/html/Core Defense.html
@@ -43,7 +43,7 @@
         
         //var extra = 1; //Separa 1 pixel entre casillas cuando hay rendija.
         //var rendija = true; //True si hay rendija activa
-		var m = new mundo(); //Objeto mundo
+		var m = new mundo(40,720); //Objeto mundo
 		var keysDown = {};//Para saber que teclas estan pulsadas
         
         //INICIALIZA TODO
