--- a/index.html
+++ b/index.html
@@ -114,11 +114,12 @@
 							<img src="src/images/titulo.png" alt="titulo" width="220" height="100"></img>
 							<p class="h4">¡Protege el núcleo central contra virus informáticos!</p>
 							<p>Primer juego creado por Slothery plus Black Games para la asignatura de Juegos para web y Redes Sociales</p>
-							<a href="src/html/Core%20Defense.html" class="btn btn-secondary">Jugar</a>	<!-- Enlace para jugar al juego -->				  
+							<a href="src/html/Core Defense.html" class="btn btn-secondary">Jugar</a>	<!-- Enlace para jugar al juego -->				  
 						  </div>
 					</div>
 					<div class="carousel-item">
-					  <img class="d-block w-100" src="src/images/core_defense_logo.png" alt="Second slide">
+						<img class="d-block w-100" src="src/images/core_defense_logo.png" alt="Second slide">
+						<a href="src/html/Core Defense Movil.html" class="btn btn-secondary">Jugar</a>
 					</div>
 					<div class="carousel-item">
 					  <img class="d-block w-100" src="src/images/unity_logo.jpg" alt="Third slide">
