--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 							<div class="col-sm-4">
 								<img class="img-fluid" src="https://images-na.ssl-images-amazon.com/images/I/71EFdlZYCXL._SX355_.jpg" alt="Image 5">
 								<h2>Nuestra mascota</h2>	
-								<p>No se me ocurría nada para que encajase con las 12 columnas que divide Bootsrap x_D</p>
+								<p>No se me ocurría nada para que encajase con las 12 columnas que divide Bootstrap x_D</p>
 							</div>
 						</div>
 				</div>
