--- a/src/html/Core Defense Movil.html
+++ b/src/html/Core Defense Movil.html
@@ -134,7 +134,7 @@
 
 <body onload="initGame()" bgcolor="#37383C">
     <p align="center">
-        <img src="../images/titulo_movil.png">
+        <img src="../images/titulo_movil.png" touchstart="w_J1_true()">
     </p>
     <p align="center">
         <button touchstart="w_J1_true()" touchend="w_J1_false()" touchleave="w_J1_false()">Arriba</button>
