--- a/src/html/Core Defense Movil.html
+++ b/src/html/Core Defense Movil.html
@@ -134,13 +134,13 @@
 
 <body onload="initGame()" bgcolor="#37383C">
     <p align="center">
-        <img src="../images/titulo_movil.png" touchstart="w_J1_true()">
+        <img src="../images/titulo_movil.png" ontouchstart="w_J1_true()">
     </p>
     <p align="center">
-        <button touchstart="w_J1_true()" touchend="w_J1_false()" touchleave="w_J1_false()">Arriba</button>
-        <button touchstart="s_J1_true()" touchend="s_J1_false()" touchleave="s_J1_false()">Abajo</button>
-        <button touchstart="a_J1_true()" touchend="a_J1_false()" touchleave="a_J1_false()">Izquierda</button>
-        <button touchstart="d_J1_true()" touchend="d_J1_false()" touchleave="d_J1_false()">Derecha</button>
+        <button ontouchstart="w_J1_true()" ontouchend="w_J1_false()" ontouchleave="w_J1_false()">Arriba</button>
+        <button ontouchstart="s_J1_true()" ontouchend="s_J1_false()" ontouchleave="s_J1_false()">Abajo</button>
+        <button ontouchstart="a_J1_true()" ontouchend="a_J1_false()" ontouchleave="a_J1_false()">Izquierda</button>
+        <button ontouchstart="d_J1_true()" ontouchend="d_J1_false()" ontouchleave="d_J1_false()">Derecha</button>
     </p>
     <p align="center">
         <canvas id="game" width="720" height="720" border="1"></canvas>
