--- a/src/html/Core Defense Movil.html
+++ b/src/html/Core Defense Movil.html
@@ -105,7 +105,7 @@
         
         startNS();
 
-        var wj1 = document.getElementById('w_j1');
+        /*var wj1 = document.getElementById('w_j1');
         wj1.addEventListener('ontouchstart', function(e){
             keysDown[87] = true;
             e.preventDefault();
@@ -123,7 +123,7 @@
         im.addEventListener('ontouchend', function(e){
             keysDown[87] = false;
             e.preventDefault();
-        }, false);
+        }, false);*/
 
         function w_J1_true(){
             
