--- a/src/html/Core Defense Movil.html
+++ b/src/html/Core Defense Movil.html
@@ -156,7 +156,7 @@
     </script>
 </head>
 
-<body onload="initGame()" bgcolor="#37383C">
+<body onload="initGame()" bgcolor="#37383C" oncontextmenu="return false;">
     <p align="center">
         <img id = "im" src="../images/titulo_movil.png" class="botonJugador">
     </p>
