--- a/src/html/Core Defense Movil.html
+++ b/src/html/Core Defense Movil.html
@@ -158,7 +158,7 @@
 
 <body onload="initGame()" bgcolor="#37383C" oncontextmenu="return false;">
     <p align="center">
-        <img src="../images/titulo_movil.png" ontouchstart="w_J1_true()" ontouchend="w_J1_true()" ontouchleave="w_J1_true()">
+        <img src="../images/titulo_movil.png" ontouchstart="w_J1_true()" ontouchend="w_J1_true()" ontouchleave="w_J1_true()" ontouchcancel="w_J1_true()">
     </p>
     <p align="center">
         <button id="w_j1" class="botonJugador">Arriba</button>
