--- a/src/html/Core Defense Movil.html
+++ b/src/html/Core Defense Movil.html
@@ -19,7 +19,7 @@
     }
 
     function init() {
-      preventLongPressMenu(document.getElementByTagName('body img'));
+      preventLongPressMenu(document.getElementById("theimage"));
     }
   </script>
   <style>
