--- a/src/html/Core Defense Movil.html
+++ b/src/html/Core Defense Movil.html
@@ -21,6 +21,10 @@
     function init() {
       preventLongPressMenu(document.getElementById("theimage"));
     }
+
+    window.oncontextmenu = function() {
+        return false;
+};
   </script>
   <style>
     *:not(input):not(textarea) {
