--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 								<img src="src/images/titulo.png" alt="titulo" width="220" height="100"></img>
 								<p class="h4">¡Protege el núcleo central contra virus informáticos!</p>
 								<p>Primer juego creado por Slothery plus Black Games para la asignatura de Juegos para web y Redes Sociales</p>
-								<a href="src/html/Core%20Defense.html" class="btn btn-info">Jugar</a>	<!-- Enlace para jugar al juego -->				
+								<a href="src/html/MenuCoreDefense.html" class="btn btn-info">Jugar</a>	<!-- Enlace para jugar al juego -->				
 								
 							</div>
 					</div>
