--- a/src/html/MenuCoreDefense.html
+++ b/src/html/MenuCoreDefense.html
@@ -304,7 +304,8 @@
 		function initVariables(){
 
 			 var audio = new Audio("../audio/menu.wav");
-			 if (sonido == off){
+
+			 if (sonido === "on"){
 			 audio.play();
 			 audio.loop= true;
 			 }
